src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  /* default is "dark mode" */
  :root {
    --color-fill-base: #000000;
    --color-fill-accent: #1c2536;
    --color-fill-inverted: #ffffff;
    --color-fill-primary: #0099cc;
    --color-button-primary: #0099cc;
    --color-button-active: #003242;
    --color-text-primary: #ffffff;
    --color-text-secondary: #a3a0b0;
  }
  .light {
    --color-fill-base: #f7f8f8;
    --color-fill-accent: #fff;
    --color-fill-inverted: #000000;
    --color-fill-primary: #0099cc;
    --color-button-primary: #0099cc;
    --color-button-active: #0099cc63;
    --color-text-primary: #5e6a70;
    --color-text-secondary: #949ba4;
  }
}
body {
  background: black;
}

#__next {
  width: 100%;
  height: 100dvh;
}

.repeating-square-background {
  background-size: 18px 18px;
  background-repeat: repeat;
  background-image: url("data:image/svg+xml,%3Csvg width='18' height='18' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0' y='0' width='2' height='2' fill='rgba(255, 255, 255, 0.03)' /%3E%3C/svg%3E");
}

.cursor-animation {
  animation: fadeIn 0.5s ease-in-out alternate-reverse infinite;
}

::-webkit-scrollbar-track {
  background: rgba(255, 255, 255, 0.05);
  border-radius: 5px;
}

::-webkit-scrollbar-thumb {
  background: rgba(255, 255, 255, 0.1);
  border-radius: 5px;
}

::-webkit-scrollbar-thumb:hover {
  background: #555; /* Even lighter grey thumb on hover */
}

::-webkit-scrollbar {
  width: 10px;
  border-radius: 5px;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.button-active {
  svg {
    g {
      rect {
        fill: var(--color-button-active);
      }
    }
  }
}
.header-button-active {
  svg {
    path:first-child {
      fill: var(--color-button-active);
    }
  }
}

